<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timetable.ScheduleFragment">

    <LinearLayout
        android:id="@+id/schedule_days"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/time_header"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/monday"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textAlignment="center"
            android:textColor="#9F9F9F"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textAlignment="center"
            android:textColor="#9F9F9F"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/thursday"
            android:textAlignment="center"
            android:textColor="#9F9F9F"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/antic"
            android:gravity="center"
            android:text="@string/friday"
            android:textAlignment="center"
            android:textColor="#9F9F9F"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ScrollView
        android:id="@+id/parent_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_days">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1666666" />

            <LinearLayout
                android:id="@+id/timeline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/six_am"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/six_am"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/seven_am"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/seven_am"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/eight_am"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/eight_am"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/nine_am"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/nine_am"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/ten_am"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/ten_am"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/eleven_am"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/eleven_am"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/twelve_am"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/twelve_am"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/one_pm"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/one_pm"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/two_pm"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/two_pm"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/three_pm"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/three_pm"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/four_pm"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/four_pm"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/five_pm"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/five_pm"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/six_pm"
                    android:layout_width="match_parent"
                    android:layout_height="180px"
                    android:background="@drawable/timeline_divider"
                    android:fontFamily="@font/antic"
                    android:paddingStart="5dp"
                    android:text="@string/six_pm"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/schedule"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/timeline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline13"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/monday_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/tuesday_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/wednesday_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/thursday_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/friday_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>