<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background_miscellaneuos"
    android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/textMiscellaneuos"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/bottom_sheet_miscellaneuos"
        android:textColor="@color/white"
        android:textSize="13sp"/>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_image"
            android:contentDescription="@string/description"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:text="@string/add_image"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>